Make tests more robust on different Java platforms
Spark itself appears to have problems on JDK9+
due to using JDK internals that are now hidden
by the module itself.

Change-Id: Iee53c8e2e7a079192e9e633192bec9bec719c38c
Reviewed-on: https://review.couchbase.org/c/couchbase-spark-connector/+/229432
Reviewed-by: Graham Pople <graham.pople@couchbase.com>
Tested-by: Graham Pople <graham.pople@couchbase.com>
(cherry picked from commit 6d80917e993bbc0373eb652a857a73630b50cafe)
Reviewed-on: https://review.couchbase.org/c/couchbase-spark-connector/+/229581